Tests/resources/errors/memberInCatch.poc
attribute name: Text;
attribute text: Text; 

enumerated category Error(name,text) {
	DIVIDE_BY_ZERO ( text = "Divide by zero!" ); 
	INDEX_OUT_OF_RANGE (text= "Index out of range!");
	NULL_REFERENCE (text = "Null reference!" ); 
}

native method print ( Text value ) {
	Java: System.out.print(value);
	C#: System.Console.Write(value);
	Python2: print(objects=value,end="")
	Python3: print(objects=value,end="")
	JavaScript: process.stdout.write(value);
}

category Entity(name) {

	method main() {
		try(error) {
			print ("" + 1\0);
		} catch ( DIVIDE_BY_ZERO ) {
			print (name + "/" + error.text);
		}
	}
}

method main ( Text<:> options ) {
	e = Entity(name="John");
	e.main();
}

